--- a/index.html
+++ b/index.html
@@ -3,8 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Visualize Data with a Scatterplot Graph</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div id="main">
+        <div id="container">
+            <div id="title">
+                <h1 class="txt">Doping in Professional Bicycle Racing</h1>
+                <h3 class="txt">35 Fastest times up Alpe d'Huez</h3>
+            </div>
+            <div id="chartHolder"></div>
+
+        </div>
+    </div>
+    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
+    <script type="module">GetChart()</script>
 </body>
 </html>
